# ko-speech-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  REUSE.toml  pyproject.toml
.github/actions/setup-uv/: action.yml
src/ko_speech_tools/: __init__.py  jamo.py  romanize.py
src/ko_speech_tools/data/g2p/: idioms.txt
src/ko_speech_tools/g2p/: cmudict.py  english.py  g2p.py  numerals.py  regular.py  special.py  utils.py
tests/: test_cmudict.py  test_g2p.py  test_hangul_romanize.py  test_jamo.py
