# SPDX-FileCopyrightText: 2025 Enno Hermann
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "ko-speech-tools"
version = "0.1.0"
description = "Korean speech/NLP tools"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSES/*.txt", "REUSE.toml"]
authors = [
    { name = "Enno Hermann", email = "enno.hermann@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
repository = "https://github.com/eginhard/ko-speech-tools"
issues = "https://github.com/eginhard/ko-speech-tools/issues"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "reuse>=5.1.1",
    "ruff==0.13.2",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=README.md"
